# Filter

./: README.md
src/: CMakeLists.txt  Doxyfile  Makefile
src/project/: CMakeLists.txt
src/project/controller/: controller.cpp  controller.hpp
src/project/model/: model.cpp  model.hpp  s21_matrix.cpp  s21_matrix.h
src/project/view/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/test/: CMakeLists.txt  kernelTest.cpp
